[package]
name = "my_project"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6.15"
embedded-hal = "0.2"
panic-halt = "0.2"
rtt-target = { version = "0.3", features = ["cortex-m"] }
stm32l4xx-hal = { version = "0.5", features = ["stm32l4x3", "rt"] }
freertos-rust = "0.1.2"